
[TestPrettyPrintMeta/renders_plain_values - 1]
| [36mName    [0m | [36mValue[0m |
| count    | 42    |
| greeting | hello |
---

[TestPrettyPrintMeta/renders_an_account_value_as_its_bare_name - 1]
| [36mName    [0m | [36mValue[0m |
| greeting | hello |
| owner    | alice |
---
